<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="about_contact">Contact</string>
    <string name="about_copyright" tools:ignore="TypographyDashes">Copyright © 2013-2018: Xavier F. GOUCHET</string>
    <string name="about_donate">Donate</string>
    <string name="about_donate_url">https://paypal.me/xaviergouchet</string>
    <string name="about_email">android@xgouchet.fr</string>
    <string name="about_history">History</string>
    <string name="about_history_v1"><![CDATA[v1.0 (apr. 2013): \n
 - Explore Package Information \n
 - Explore Package Manifest ]]></string>
    <string name="about_history_v2"><![CDATA[v2.0 (jan. 2018): \n
 - Display package signing certificate \n
 - Material design ]]></string>
    <string name="about_history_v2_1"><![CDATA[v2.1 (mar. 2018): \n
 - Ensure data is restored on screen rotation \n
 - Add more known features / permissions ]]></string>
    <string name="about_history_v2_2"><![CDATA[v2.2 (sep. 2018): \n
 - List apps with same certificate \n
 - Make search case insensitive \n
 - Handle app installed, replaced and uninstalled events ]]></string>
    <string name="about_history_v2_3"><![CDATA[v2.3 (sep. 2018): \n
 - Open non-installed APK from the app ]]></string>
    <string name="about_history_v2_4"><![CDATA[v2.4 (nov. 2018): \n
 - Prevent crash on Certificate screen \n
 - Prevent crash on Manifest export]]></string>
    <string name="about_history_v2_5"><![CDATA[v2.5 (jul. 2019): \n
 - Fix uninstall bug on Android O (26) and higher \n
 - Display application minimum SDK on Android N (24) and higher \n
 - Launch an application from the list]]></string>
    <string name="about_history_v2_6"><![CDATA[v2.6 (mar. 2020): \n
 - Handle unsigned APKs \n
 - Add Dark theme support \n
 - Display native libraries]]></string>
    <string name="about_history_v2_7"><![CDATA[v2.7 (oct. 2020): \n
 - Fix Dark Theme \n
 - Display SHA-256 hash of signing certificates\n
 - Replace Google\'s non free OSS License activity with in-house solution]]></string>
    <string name="about_license">License</string>
    <string name="about_mit">MIT License</string>
    <string name="about_description">An application explorer for developers</string>
    <string name="about_twitter">xgouchet</string>
    <string name="about_github">xgouchet/Stanley</string>

    <string name="action_app_info">System Application Info</string>
    <string name="action_launch">Launch</string>
    <string name="action_manifest">Export Manifest</string>
    <string name="action_open">Open</string>
    <string name="action_play_store">Open in Play Store</string>
    <string name="action_uninstall">Uninstall</string>
    <string name="action_more">More</string>

    <string name="activity_title_about">About Stanley…</string>
    <string name="activity_title_apkDetails">APK file details</string>
    <string name="activity_title_appDetails">Application details</string>
    <string name="activity_title_appList">Stanley</string>
    <string name="activity_title_licenses">Third party licenses</string>
    <string name="activity_title_certificateAppList">Certificate App List</string>

    <string name="app_installed_on">Installed on :</string>
    <string name="app_name">Stanley</string>
    <string name="app_updated_on">Updated on :</string>

    <string name="dialog_title_launcher">Open</string>

    <string name="error_exported_manifest">No application can open a Manifest. Try installing one from the Play Store.</string>

    <string name="header_type_activities">Activities</string>
    <string name="header_type_custom_permissions">Declared Permissions</string>
    <string name="header_type_features">Features required</string>
    <string name="header_type_global">Global information</string>
    <string name="header_type_providers">Content Providers</string>
    <string name="header_type_receivers">Broadcast Receivers</string>
    <string name="header_type_services">Services</string>
    <string name="header_type_signature">Signing certificates</string>
    <string name="header_type_uses_permissions">Requested Permissions</string>
    <string name="header_type_native_libs">Native Libraries</string>

    <string name="menu_about">About…</string>
    <string name="menu_hide_system_apps">Hide system apps</string>
    <string name="menu_licenses">Licenses</string>
    <string name="menu_open_apk">Open Apk</string>
    <string name="menu_show_system_apps">Show system apps</string>
    <string name="menu_sort">Sort by…</string>
    <string name="menu_sort_by_install_time">…by install date</string>
    <string name="menu_sort_by_package_name">…by package name</string>
    <string name="menu_sort_by_title">…by title</string>
    <string name="menu_sort_by_update_time">…by update date</string>

    <string name="msg_empty_app_list">No application found</string>

    <string name="permission_explanation_storage_apk">To be able to open this APK, we need permission to read your external storage.</string>
    <string name="permission_explanation_uninstall">To be able to uninstall this app, we need your permission.</string>
    <string name="permission_explanation_query_packages">To be able to list all apps, we need your permission.</string>

    <string name="pref_description_show_system_apps_off">Only installed apps are displayed</string>
    <string name="pref_description_show_system_apps_on">System applications are displayed</string>
    <string name="pref_title_show_system_apps">Display system apps</string>
    <string name="pref_title_sort_criteria">Sort apps by …</string>
    <string name="intent_filter_actions">Actions</string>
    <string name="intent_filter_categories">Categories</string>
    <string name="intent_filter_data">Data</string>
</resources>
