<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="false"
        android:key="show_system_apps"
        android:summaryOff="@string/pref_description_show_system_apps_off"
        android:summaryOn="@string/pref_description_show_system_apps_on"
        android:title="@string/pref_title_show_system_apps" />

    <ListPreference
        android:defaultValue="0"
        android:entries="@array/pref_sort_entries"
        android:entryValues="@array/pref_sort_values"
        android:key="sort_criteria"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_sort_criteria" />

    <!--&lt;!&ndash; NOTE: EditTextPreference accepts EditText attributes. &ndash;&gt;-->
    <!--&lt;!&ndash; NOTE: EditTextPreference's summary should be set to its value by the activity code. &ndash;&gt;-->
    <!--<EditTextPreference-->
    <!--android:capitalize="words"-->
    <!--android:defaultValue="@string/pref_default_display_name"-->
    <!--android:inputType="textCapWords"-->
    <!--android:key="example_text"-->
    <!--android:maxLines="1"-->
    <!--android:selectAllOnFocus="true"-->
    <!--android:singleLine="true"-->
    <!--android:title="@string/pref_title_display_name" />-->


</PreferenceScreen>
